# babybuddy

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
app/: manage.py
app/apps/accounts/: context_processors.py  forms.py  urls.py  views.py
app/apps/analytics/: urls.py  views.py
app/apps/api/: apps.py  urls.py  views.py
app/apps/babies/: admin.py  apps.py  models.py  urls.py  views.py
app/apps/babies/migrations/: 0001_initial.py
app/apps/common/: middleware.py  security.py
app/apps/events/: admin.py  forms.py  models.py  services.py  urls.py  views.py
app/apps/events/migrations/: 0001_initial.py  0002_idempotencyrecord.py  0003_rename_events_event_family__b55af7_idx_events_even_family__c6d975_idx_and_more.py
app/apps/families/: admin.py  models.py  services.py  urls.py  views.py
app/apps/families/migrations/: 0001_initial.py  0002_rename_families_fam_user_id_50b8fc_idx_families_fa_user_id_fc0662_idx.py
app/babybuddy/: asgi.py  urls.py  wsgi.py
app/babybuddy/settings/: base.py  local.py  production.py
app/static/css/: app.css
app/static/js/: app.js
app/templates/accounts/: login.html  register.html
app/templates/analytics/: dashboard.html
app/templates/babies/: list.html
app/templates/base/: base.html
app/templates/events/: calendar.html  form.html  timeline.html
app/templates/families/: list.html
infra/: docker-compose.yml  operations.md  render.yaml
tests/: test_accounts.py  test_events.py  test_smoke_e2e.py  test_stability.py
